@@ -1,0 +1,132 @@
+/* Basic Form Elements */
+.gform_wrapper input[type=text],
+.gform_wrapper input[type=url],
+.gform_wrapper input[type=email],
+.gform_wrapper input[type=tel],
+.gform_wrapper input[type=number],
+.gform_wrapper input[type=password],
+.gform_wrapper textarea {
+    font-size: 13px;
+    margin-bottom: 0;
+    padding: 6px 12px;
+}
+.gform_wrapper .ginput_complex label,
+.gform_wrapper .gfield_time_hour label,
+.gform_wrapper .gfield_time_minute label,
+.gform_wrapper .gfield_date_month label,
+.gform_wrapper .gfield_date_day label,
+.gform_wrapper .gfield_date_year label,
+.gform_wrapper .instruction {
+    font-weight: inherit;
+    font-size: 12px;
+    margin: 5px 2px;
+}
+.gform_wrapper .gfield_checkbox li label,
+.gform_wrapper .gfield_radio li label {
+    font-weight: inherit;
+}
+.gform_wrapper .ginput_left input:focus+label,
+.gform_wrapper .ginput_right input:focus+label,
+.gform_wrapper .ginput_full input:focus+label {
+    font-weight: inherit;
+}
+.gform_wrapper .top_label .gfield_label {
+    margin: 20px 0 7px 0;
+}
+.gform_wrapper .top_label > li:first-child .gfield_label {
+    margin-top: 0;
+}
+.gform_wrapper select[multiple=multiple] {
+    padding: 0;
+}
+.gform_wrapper select[multiple=multiple] option {
+    padding: 8px;
+}
+.gform_wrapper ul.gfield_checkbox li,
+.gform_wrapper ul.gfield_radio li {
+    padding: 0 0 0 2px !important;
+}
+.rtl .gform_wrapper ul.gfield_checkbox li,
+.rtl .gform_wrapper ul.gfield_radio li {
+    padding: 0 2px 0 0 !important;
+}
+
+/* Element Widths */
+.gform_wrapper {
+    width: 100%;
+}
+.gform_wrapper .gform_heading {
+    width: 100%;
+}
+
+/* Headers */
+.gform_wrapper h3.gform_title {
+    font-size: 1.7em;
+}
+
+/* Sections */
+.gform_wrapper .gsection {
+    border-bottom: 1px solid #dddddd;
+    margin-bottom: 0;
+    padding-bottom: 20px;
+}
+.content_dark .gform_wrapper .gsection {
+    border-color: #000000;
+}
+.gform_wrapper .top_label > .gsection:first-child {
+    margin-top: 0;
+}
+.gform_wrapper .gsection_description {
+    font-size: inherit;
+    padding: 12px 0 0 0;
+}
+
+/* Title + Description */
+.gform_wrapper .gform_heading {
+    width: auto;
+}
+.gform_wrapper h3.gform_title {
+    margin: inherit;
+}
+.gform_wrapper span.gform_description {
+    font-weight: inherit;
+}
+.gform_wrapper .field_description_below .gfield_description {
+    padding-bottom: 0;
+}
+
+/* Form Footer */
+.gform_wrapper .gform_footer {
+    margin: 0;
+}
+
+/* Errors */
+.gform_wrapper li.gfield.gfield_error,
+.gform_wrapper li.gfield.gfield_error.gfield_contains_required.gfield_creditcard_warning {
+    background-color: #f2dede;
+    border: 1px solid #ebccd1;
+}
+.gform_wrapper .gfield_error .gfield_label,
+.gform_wrapper .validation_message {
+    color: #a94442;
+}
+.gform_wrapper .gfield_error .gfield_label {
+    margin-top: 0;
+}
+.gform_wrapper .validation_message {
+    font-weight: inherit;
+}
+.gform_wrapper li.gfield.gfield_error,
+.gform_wrapper li.gfield.gfield_error.gfield_contains_required,
+.gform_wrapper li.gfield.gfield_error.gfield_contains_required.gfield_creditcard_warning {
+    padding: 10px 15px !important;
+}
+.gform_wrapper .top_label .gfield_description.validation_message,
+.gform_wrapper .gfield_description.validation_message {
+    padding-bottom: 0 !important;
+}
+.gform_wrapper li.gfield.gfield_error.gfield_contains_required label.gfield_label,
+.gform_wrapper li.gfield.gfield_error.gfield_contains_required div.ginput_container,
+.gform_wrapper .ginput_container + .gfield_description.validation_message {
+    margin-top: 0;
+}
