@@ -5,6 +5,7 @@ Jump Start Changelog
 -----
 
 * Added WooCommerce support.
+* Added Gravity Forms support.
 * Added "Sidebar Widgets" styling section to Theme Options for all theme bases.
 * Added theme support for `title-tag` in WP 4.1+
 * Added a little design flare to alert component, to look less Bootstrap-ish.
